--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
+    "next-intl": "^4.6.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
