--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
     "framer-motion": "^12.23.26",
-    "next": "16.0.10",
+    "next": "^15.5.9",
     "next-intl": "^4.6.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -28,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "15.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
